Adding Scheduler functionality but includes bug